<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:id="@+id/duty_rostered_mainscreen">

    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="match_parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/DutyUI_label_SignOn"
                android:id="@+id/textview_DutyUI_Label_signON"
                android:layout_column="0"
                android:layout_span="0" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/Button_DutyUI_DutySignon_displayButton"
                android:layout_column="0"
                android:visibility="visible"
                android:layout_span="0"
                android:hint="00:00 L"
                android:layout_marginLeft="20dp" />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Delayed Checkin"
                android:id="@+id/checkBox_DutyUI_delayedCheckIn"
                android:checked="false"
                android:layout_gravity="right"
                android:layout_column="0"
                android:layout_span="0"
                android:layout_marginRight="15dp" />
        </TableRow>
    </TableLayout>

    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/label_DutyUI_NumOfSectors"
                android:id="@+id/textView_DutyUI_Label_numOfSectors"
                android:layout_column="0"
                android:layout_span="0" />

            <Spinner
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/spinner_dutyUI_NumOfSectors"
                android:entries="@array/number_sectors"
                android:layout_weight="1"
                android:layout_span="1"
                android:layout_marginRight="10dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="Orig. Report:"
                android:id="@+id/textview_DutyUI_label_OrigReport" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/Button_DutyUI_OrigReport_displayButton"
                android:hint="00:00 L"
                android:layout_marginRight="10dp" />
        </TableRow>
    </TableLayout>

    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginTop="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/textView_DutyUI_label_MaxFDP"
                android:id="@+id/DutyUI_label_MaxFDP"
                android:layout_span="0"
                android:layout_column="0" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:id="@+id/textView_Display_DutyUI_MaxFDP"
                android:layout_weight="1"
                android:hint="--:--" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/DutyUI_label_duty_limit"
                android:id="@+id/Display_DutyUI_DutyLimit"
                android:layout_marginTop="20dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:id="@+id/textView_Display_DutyUI_DutyLimit"
                android:layout_marginTop="20dp" />
        </TableRow>

    </TableLayout>

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="New Text"
        android:id="@+id/text_view_testbox"
        android:layout_weight="1"
        android:layout_marginTop="40dp" />


</LinearLayout>